# hvac-fitting-loss

./: CHANGELOG.md  LICENSE  README.md  pyproject.toml
hvac_pressure/: __init__.py  core.py  interpolation.py  system.py  units.py
hvac_pressure/data/: __init__.py  ashrae_tables.py
tests/: test_hvac_pressure.py
