[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "hvac_pressure"
version = "0.1.0"
authors = [
  { name="Jeremy Simonneau" },
]
description = "HVAC static pressure loss calculator using Darcy-Weisbach and ASHRAE fitting coefficients."
urls = { Repository = "https://github.com/JeremySimonneau/hvac-fitting-loss" }
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering",
]
dependencies = []

[project.optional-dependencies]
test = ["pytest"]
